# reasoning-agent-api

./: .dockerignore  .env.dev.example  .env.example  .env.personal.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.mcp  Dockerfile.web-client  LITELLM_MIGRATION_FINDINGS.md  Makefile  README.md  README_ARCHITECTURE.MD  README_DOCKER.md  README_MCP_QUICKSTART.md  README_PHOENIX.md  README_USAGE.md  demo_openai_sdk.py  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.personal.yml  docker-compose.yml  pyproject.toml  python_coding_guidelines.md  reasoning_implementation.md  render.yaml  ruff.toml
.github/workflows/: tests.yaml
alembic/: env.py
alembic/versions/: 53b42e6d6e03_remove_system_message_column.py  6904aae0a5a8_add_conversation_storage_tables.py  6e688aaae9c9_drop_routing_mode_column.py  afcaed29bdd7_add_total_cost_and_remove_tool_calls.py  bb4b0979d1e4_add_message_full_text_search.py
api/: auth.py  config.py  config_loader.py  context_manager.py  conversation_models.py  conversation_utils.py  dependencies.py  main.py  mcp.py  mcp_client.py  mcp_config_loader.py  mcp_manager.py  models.py  openai_protocol.py  passthrough.py  prompts.py  reasoning_agent.py  reasoning_models.py  request_router.py  tools.py  tracing.py
api/database/: __init__.py  conversation_db.py
api/executors/: __init__.py  base.py  passthrough.py  reasoning_agent.py
client/: .env.example  .gitignore  README.md  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/electron/: main.ts  preload.ts
client/src/: App.tsx  constants.ts  electron.d.ts  index.css  main.tsx  vite-env.d.ts
client/tests/: App.test.tsx  setup.ts  sse-parser.test.ts
config/: demo_mcp_servers.yaml  litellm_config.yaml  mcp-this-bridge-tools.yaml  mcp-this-tools.yaml  mcp_bridge_config.example.json  mcp_bridge_config.json.bak  mcp_overrides.example.yaml  mcp_overrides.yaml.bak  mcp_servers.docker.json  mcp_servers.docker.yaml  mcp_servers.example.json  mcp_servers.json  mcp_servers.json.bak  mcp_servers.yaml  production.yaml
docs/: conversation_storage_impact_analysis.md  dapr_101.md  json_mode_vs_structured_outputs.md  mcp_bridge_testing.md  path_translation_migration_status.md
docs/archive/: 2025-10-12-orchestration.md  2025-10-12-orchestration__outstanding_questions.md
docs/client/: settings_implementation.md
docs/implementation_plans/: 2025-10-05-dapr-orchestration.md  2025-10-05-dapr-orchestration__concerns.md  2025-10-11-orchestration.md  2025-10-12-orchestration.md  2025-10-18-litellm-UPDATED.md  2025-10-18-litellm.md  2025-10-21-dag_orchestration_design.md  2025-10-25-SUMMARY.md  2025-10-25-conversation-storage.md  2025-10-25-electron-agent-response.md  2025-10-25-electron.md  2025-10-25-litellm-migration-review.md  2025-10-25-litellm-models-proxy.md  2025-10-25-todo.md  2025-11-01-executor-refactor.md  2025-11-01-refactor-main-and-conv-db.md  2025-11-02-executor-refactor-chunks.md  2025-11-08-per-tab-streaming.md  2025-11-08-reasoning-support.md  2025-11-09-mcp-http-bridge.md  2025-11-15-mcp-tools-prompts-endpoints.md  2025-11-16-mcp-naming-conventions.md  2025-11-16-mcp-naming-testing-plan.md  2025-11-17-system-message.md  2025-11-22-context-manager.md  2025-11-23-remove-mcp.md  2025-11-25-web-scraper.md  2025-11-27-mcp-wrapper.md  2025-11-27-prompts.md  2025-11-29-deployment.md  2025-11-30-reasoning-agent-context.md  2025-12-06-context-manager-llm-driven-context.md  2025-12-07-pydantic-message-metadata.md  implementation-plan-instructions.md  temp-memory-discussion.md
docs/poc_scripts/: test_token_count_string_vs_messages.py  test_token_counting_performance.py
examples/: .env.example  README.md  demo_basic.py  demo_complete.py  demo_mcp_client.py  demo_mcp_server.py  demo_openai_sdk.py  demo_raw_api.py  demo_reasoning_agent.py  demo_reasoning_agent_complex.py  demo_with_mcp_tools.py  example-openai-api.ipynb  example-sik-llms.ipynb  litellm-metadata-exploration.ipynb  setup_demo.py  sik-llms-example.ipynb  test_mcp_integration.py  web_scraper.ipynb  web_search.ipynb
examples/configs/: demo_basic.yaml  demo_complete.json  demo_complete.yaml  demo_raw_api.yaml
mcp_bridge/: README.md  __init__.py  config.json  config.test.json  server.py
mcp_server/: __init__.py  server.py  tools.py.backup
mcp_servers/: fake_server.py
notes/: cancellation-human-in-loop.md  orchestrator-notes.md  reasoning_agent_improvement.md
prompts/: final_answer.md  reasoning_system.md  reasoning_system_no_tools.md  reasoning_system_tools.md  tool_selection.md
reasoning_api/: Dockerfile  alembic.ini
reasoning_api/alembic/: env.py
reasoning_api/prompts/: final_answer.md  reasoning_system_no_tools.md  reasoning_system_tools.md  tool_selection.md
reasoning_api/reasoning_api/: __init__.py  auth.py  config.py  context_manager.py  conversation_utils.py  dependencies.py  logging_config.py  main.py  mcp.py  prompt_manager.py  reasoning_models.py  request_router.py  tools.py  (+3 more)
scripts/: phoenix_data_management.sh  setup_litellm_keys.sh  setup_personal.sh
tests/: CANCELLATION_TESTS.md  __init__.py  conftest.py  test_api.py  test_auth.py  test_config.py  test_config_loader.py  test_dependencies.py  test_execute_tools.py  test_integration.py  test_mcp.py  test_mcp_client.py  test_mcp_config_loader.py  test_mcp_integration.py  test_mcp_manager.py  test_mcp_simple.py  test_mcp_to_tool.py  test_models.py  test_openai_api_compatibility.py  test_phoenix_connection.py  test_phoenix_error_handling.py  test_reasoning_agent.py  test_reasoning_agent_context.py  test_reasoning_agent_streaming_tool_results.py  test_reasoning_agent_tool_execution.py  test_reasoning_integration.py  test_reasoning_models.py  test_reasoning_summary.py  test_streaming_tool_results.py  test_tools.py  test_tracing_integration.py
tools_api/: Dockerfile  README.md  __init__.py  config.py  main.py  models.py
web-client/: .env.example  .gitignore  .sesskey  GETTING_STARTED.md  README.md  main.py  pyproject.toml
workspace/: .gitkeep
(+278 files in other folders)
