[project]
name = "reasoning-agent-web-client"
version = "0.1.0"
description = "MonsterUI web client for the Reasoning Agent API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "monsterui>=1.0.21",
    "python-dotenv>=1.1.1",
    "python-fasthtml>=0.12.21",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
